fix link color to pass WCAG contrast ratio

--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -121,20 +121,20 @@ body.full-screen-terminal .terminal {
     color: #000 !important;
 }
 .terminal .terminal-output > :not(.raw) a[href], .cmd a[href] {
-    color: #0F60FF;
-    color: var(--link-color, #0F60FF);
+    color: #3377FF;
+    color: var(--link-color, #3377FF);
     cursor: pointer;
 }
 .cmd a[href]:not(.terminal-inverted),
 .terminal .terminal-output > :not(.raw) a[href]:not(.terminal-inverted) {
-    --color: var(--link-color, #0F60FF);
+    --color: var(--link-color, #3377FF);
 }
 .terminal .terminal-output > :not(.raw) a[href].terminal-inverted {
     background: var(--color, #ccc);
 }
 .terminal .terminal-output > :not(.raw) a[href]:hover, .cmd a[href]:hover {
-    background-color: #0F60FF;
-    background-color: var(--link-color, #0F60FF) !important;
+    background-color: #3377FF;
+    background-color: var(--link-color, #3377FF) !important;
     color: #000;
     color: var(--background, #000) !important;
     text-decoration: none;
@@ -145,16 +145,16 @@ body.full-screen-terminal .terminal {
      * shorter and simple solution
      * it's hard to overwrite long :not selector (:not(a span) don't work)
      */
-    color: #0F60FF !important;
-    --color: var(--link-color, #0F60FF);
-    color: var(--link-color, #0F60FF) !important;
+    color: #3377FF !important;
+    --color: var(--link-color, #3377FF);
+    color: var(--link-color, #3377FF) !important;
     text-decoration: underline;
 }
 
 .terminal .terminal-output > :not(.raw) a[href]:hover span,
 .cmd a[href]:hover span {
-    background-color: #0F60FF !important;
-    background-color: var(--link-color, #0F60FF) !important;
+    background-color: #3377FF !important;
+    background-color: var(--link-color, #3377FF) !important;
     color: #000 !important;
     color: var(--background, #000) !important;
     text-decoration: none;
@@ -346,7 +346,7 @@ terminal .terminal-output > div {
     --original-color: var(--color, #aaa);
 }
 .cmd a[href] {
-    --original-color: var(--link-color, #0F60FF);
+    --original-color: var(--link-color, #3377FF);
 }
 /* DEFAULT ANIMATION */
 @-webkit-keyframes terminal-blink {
